fixing alignment of background

--- a/partials/_video.scss
+++ b/partials/_video.scss
@@ -1,6 +1,6 @@
 .banner {
-  height: 550px;
-  margin-top: -100px;
+  height: 450px;
+  margin-top: 0px;
 
   .container {
     padding: 20px;
